Migrate LDAP group sync to resource APIs